--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Lionel Messi Stats ⚡</title>
+  <style>
+  body {
+    background-color:#C6DCE4;
+  }
+  hr{
+    border-style:none;
+    border-top-style:dotted;
+    border-color: grey;
+    border-width: 4px;
+    height: 0px;
+    width: 6%;
+  }
+  </style>
 </head>
 
 <body>
@@ -18,10 +31,11 @@
 
         <p>
           <em>
-            Plays for <strong>Argentina</strong>
+            Plays for <strong>PSG and Argentina</strong>
           </em>
         </p>
         <p>
+          Lionel Andrés Messi; born 24 June 1987, also known as Leo Messi, is an Argentine professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and captains the Argentina national team. Often considered the best player in the world and widely regarded as one of the greatest players of all time, Messi has won a record seven Ballon d'Or awards,[note 2] a record six European Golden Shoes, and in 2020 was named to the Ballon d'Or Dream Team.
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
         </p>
       </td>
@@ -141,6 +155,7 @@
   </ol>
   <p>
     See more <a href="https://www.uefa.com/uefachampionsleague/news/0242-0e97e0ac1cb3-eef786ff788c-1000--lionel-messi-at-35-what-records-does-he-hold/">here</a>
+<hr />
 <form
   class="" action="index.html" method="post">
   <label>Your name:</label>
